2005-12-08  Frank Ch. Eigler  <fche@elastic.org>

	PR 1937
	* buildrun.cxx (run_pass): Pass new "-d PID" option to stpd.
	Set SIGHUP to SIG_IGN too.

2005-12-07  Graydon Hoare  <graydon@redhat.com>

	* staptree.cxx (traversing_visitor::visit_foreach_loop): Visit
	the base indexable of the foreach loop.

	* translate.cxx (c_tmpcounter::visit_foreach_loop): Implement
	histogram bucket iteration arm.
	(c_unparser::visit_foreach_loop): Likewise.
	(c_tmpcounter::visit_arrayindex): Fix typo.

	* testsuite/buildok/iterate_histogram_buckets.stp: New test.

2005-12-07  Martin Hunt  <hunt@redhat.com>

	* translate.cxx (mapvar::fini): Use _stp_pmap_del() on pmaps.
	(emit_global): For pmaps, use "PMAP" instead of "MAP".

2005-12-06  Frank Ch. Eigler  <fche@elastic.org>

	PR 1934.
	* tapsets.cxx (resolve_prologue_endings2): Add new heuristic for
	tail-call optimized functions.
	(query_func_info): Make somewhat less verbose.

2005-12-06  Graydon Hoare  <graydon@redhat.com>

	* translate.cxx (visit_print_format): Explicitly Cast int64_t
	(pe_long) args to (long long) in generated code, for portability.

2005-12-05  Frank Ch. Eigler  <fche@elastic.org>

	* *.cxx: Add <cassert> #include as needed.

2005-12-02  Graydon Hoare  <graydon@redhat.com>

	* elaborate.cxx (mutated_var_collector): Forward
	traversal portion of calls to base class.
	(mutated_var_collector::visit_arrayindex): Resolve
	arrayindex-into-histogram expression as pe_long.
	(typeresolution_info::visit_print_format): Traverse
	into histogram if present.

	* parse.cxx (parse_symbol): Handle parse ambiguity surrounding
	print(@hist_op(...)[...]).

	* staptree.cxx (traversing_visitor::visit_arrayindex): Visit
	base member of arrayindex.

	* translate.cxx (c_unparser::histogram_index_check): New method.
	(var::hist): Fix bug.
	(var::buckets): New method.
	(stmt_expr::stmt_expr): Print with newline.
	(c_unparser::load_map_indices): Handle indexing-histogram case.
	(c_tmpcounter::visit_arrayindex): Likewise.